# dfgame-ui

./: .gitignore  LICENSE  README.md  meson.build
demo/: main.c  meson.build
demo/assets/: frame.xml
src/: frame.c  frame.h  frame_data.c  frame_data.h  frame_io.c  frame_io.h  layout.c  layout.h  layout_element.h  menu.c  menu.h  meson.build
subprojects/: dfgame.wrap  glfw.wrap
